--- a/app/views/static_pages/contacts.html.erb
+++ b/app/views/static_pages/contacts.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'Contacts')%>
 
-<h1>Home</h1>
+<h1>Contacts</h1>
  <p>
-   This is the home page for the
+   This is the contacts page for the
    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
    sample application.
 </p>
