exersises for chapter 5

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'Contacts')%>
+<% provide(:title, 'Contact')%>
 
-<h1>Contacts</h1>
+<h1>Contact Us</h1>
  <p>
    This is the contacts page for the
    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
