--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,7 @@
     </div>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
+<!--     </div>
+     <%= render 'layouts/request_stuff' if Rails.env.development? %>  -->
   </body>
 </html>
